Person profile bug fixed
Fixed mobile view bug which caused overlapping images in people profiles

--- a/style.css
+++ b/style.css
@@ -698,7 +698,8 @@ body.show-nav #header-nav {
 }
 
 #mapid { 
-    
+    width: 90%;
+    height: auto;
 }
 
 #medium-widget{
